# simpledaemon

./: CMakeLists.txt  Dockerfile  README
scripts/: get_build_info.py
src/: main.cpp
